--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,12 @@
       <artifactId>spigot-api</artifactId>
       <version>1.12-R0.1-SNAPSHOT</version>
       <type>jar</type>
-      <scope>compile</scope>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.dumptruckman.minecraft.pluginbase</groupId>
+      <artifactId>plugin-bukkit</artifactId>
+      <version>1.5.3-SNAPSHOT</version>
     </dependency>
   </dependencies>
 
