--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,4 +1,4 @@
 name: Pinapp
-author: codename_B
-main: com.ubempire.not.a.portal.Pinapp
-version: 2.0
+main: not.a.portal.Pinapp
+author: dumptruckman
+version: @plugin_version@
