--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ import org.apache.tools.ant.filters.ReplaceTokens
 
 buildscript {
     ext {
-        kotlin_version = '1.1.3-2'
+        kotlin_version = '1.1.4'
         bukkit_version = '1.12.1-R0.1-SNAPSHOT'
         plugin_version = '3.0-SNAPSHOT'
     }
